--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,184 @@
+absl-py==0.13.0
+aiofiles==0.7.0
+aiohttp==3.7.4.post0
+aiostream==0.4.3
+anyio==3.3.0
+argon2-cffi==20.1.0
+asgiref==3.4.1
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+attrs==21.2.0
+azure-ai-textanalytics==5.1.0
+azure-cognitiveservices-vision-computervision==0.9.0
+azure-common==1.1.27
+azure-core==1.17.0
+Babel==2.9.1
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+bleach==4.0.0
+blis==0.7.4
+cachetools==4.2.2
+catalogue==2.0.6
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.4
+clang==5.0
+click==7.1.2
+colorama==0.4.4
+commonmark==0.9.1
+cryptography==3.4.7
+cycler==0.10.0
+cymem==2.0.5
+dateparser==1.0.0
+debugpy==1.4.1
+decorator==5.0.9
+defusedxml==0.7.1
+docker==5.0.0
 easyocr==1.4
-torch 
-torchvision
+entrypoints==0.3
+es-core-news-lg==3.1.0
+es-core-news-md==3.1.0
+fastapi==0.68.0
+filelock==3.0.12
+flatbuffers==1.12
+gast==0.4.0
+google-api-core==1.31.1
+google-auth==1.34.0
+google-auth-oauthlib==0.4.5
+google-cloud-vision==2.4.2
+google-pasta==0.2.0
+googleapis-common-protos==1.53.0
+grpcio==1.39.0
+h11==0.12.0
+h5py==3.1.0
+httptools==0.2.0
+idna==3.2
+imageio==2.9.0
+install==1.3.4
+ipykernel==6.0.3
+ipython==7.26.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isodate==0.6.0
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+json5==0.9.6
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyter-server==1.10.2
+jupyterlab==3.1.4
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.6.2
+jupyterlab-widgets==1.0.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+language-tool-python==2.5.5
+lz4==3.1.1
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mistune==0.8.4
+msrest==0.6.21
+multidict==5.1.0
+murmurhash==1.0.5
+nbclassic==0.3.1
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.2
+nltk==3.6.2
+notebook==6.4.2
+numpy==1.19.5
+oauthlib==3.1.1
+opencv-python==4.5.3.56
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.3.2
+pandocfilters==1.4.3
+parso==0.8.2
+pathspec==0.9.0
+pathy==0.6.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
+preshed==3.0.5
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+proto-plus==1.19.0
+protobuf==3.17.3
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydantic==1.8.2
+Pygments==2.9.0
+pyparsing==2.4.7
+pyphen==0.11.0
+pyrsistent==0.18.0
+pytesseract==0.3.8
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-dotenv==0.19.0
+python-multipart==0.0.5
+pytz==2021.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq==22.2.1
+qtconsole==5.1.1
+QtPy==1.9.0
+regex==2021.8.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rich==10.7.0
+rsa==4.7.2
+scikit-image==0.18.2
+scipy==1.7.1
+Send2Trash==1.8.0
+six==1.15.0
+smart-open==5.2.0
+sniffio==1.2.0
+spacy==3.1.2
+spacy-legacy==3.0.8
+srsly==2.4.1
+starlette==0.14.2
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+terminado==0.10.1
+testpath==0.5.0
+textdistance==4.2.1
+textstat==0.7.2
+thinc==8.0.8
+tifffile==2021.8.8
+torch==1.9.0
+torchvision==0.10.0
+tornado==6.1
+tqdm==4.62.1
+traitlets==5.0.5
+typer==0.3.2
+typing-extensions==3.7.4.3
+tzlocal==3.0
+urllib3==1.26.6
+uvicorn==0.15.0
+uvloop==0.16.0
+wasabi==0.8.2
+watchgod==0.7
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.1.1
+websockets==9.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+yarl==1.6.3
